[workspace]
resolver = "2"
members = [
    "crates/nric",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.package]
version = "0.0.1"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

[workspace.dependencies]
