[tool.poetry]
name = "sgpydantic"
version = "0.0.1"
description = "Provides pydantic-compatible and more secured data models in the Singaporean context."
authors = ["Jim Chng <jimchng@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dependencies]
maturin = "^0.14.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"crates/nric/pyproject.toml" = [
    'version = "{version}"'
]

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "../sgpydantic-python/tests"]
python_functions = ["test"]