[package]
name = "encryptable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "gen_keys"
path = "./src/gen_keys.rs"

[lib]
name = "encryptable"
crate-type = ["cdylib"]

[dependencies]
clap = "3.0"
dotenv = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
aes-gcm = "0.10.1"
rand = "0.8.5"
base64 = "0.21.0"
serde-encrypt = "0.7.0"
crypto_box = "0.8.2"
thiserror = "1.0.24"
