[package]
name = "nric_do_not_use"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nric_do_not_use"
crate-type = ["cdylib"]

[[bin]]
name = "nric-app"
path = "src/nric_app.rs"

[[bin]]
name = "gen-keys"
path = "src/gen_keys.rs"

[dependencies]
pyo3 = { version = "0.16.6", features = ["extension-module", "anyhow"] }
strum = "0.24"
strum_macros = "0.24"
clap = "3.0"
dotenv = "0.15"
serde = { version = "1.0.152", features = ["derive"] }
anyhow = "1.0.69"
aes-gcm = "0.10.1"
rand = "0.8.5"
base64 = "0.21.0"
serde-encrypt = "0.7.0"
