[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "nric_do_not_use"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "nric_do_not_use"
version = "0.1.0"
description = "Custom `NRIC` python type, implemented in Rust, just for fun. Do not use for anything serious."
authors = [""]

[tool.poetry.dependencies]
pydantic = { version = "^1.10.5", python = ">=3.7" }
